<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>io.kokuwa.maven</groupId>
		<artifactId>maven-parent</artifactId>
		<version>0.6.9</version>
		<relativePath/>
	</parent>

	<groupId>io.inoa</groupId>
	<artifactId>parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>INOA</name>
	<url>https://github.com/inoa-io/inoa-cloud</url>
	<inceptionYear>2021</inceptionYear>
	<organization>
		<name>INOA</name>
		<url>https://github.com/inoa-io</url>
	</organization>
	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<modules>
		<module>lib</module>
		<module>fleet</module>
		<module>measurement</module>
		<module>test</module>
	</modules>

	<scm>
		<url>https://github.com/inoa-io/inoa-cloud</url>
		<connection>scm:git:https://github.com/inoa-io/inoa-cloud.git</connection>
		<developerConnection>scm:git:https://github.com/inoa-io/inoa-cloud.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<system>jira</system>
		<url>https://github.com/inoa-io/inoa-cloud/issues</url>
	</issueManagement>
	<ciManagement>
		<system>github</system>
		<url>https://github.com/inoa-io/inoa-cloud/actions</url>
	</ciManagement>

	<properties>

		<!-- ===================================================================== -->
		<!-- ============================== Build ================================ -->
		<!-- ===================================================================== -->

		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.failOnWarning>false</maven.compiler.failOnWarning>
		<maven.source.skip>true</maven.source.skip>
		<maven.javadoc.skip>true</maven.javadoc.skip>

		<jib.container.jvmFlags>-XX:+ExitOnOutOfMemoryError</jib.container.jvmFlags>
		<jib.from.image>eclipse-temurin:${maven.compiler.target}-jre</jib.from.image>
		<jib.to.image>ghcr.io/inoa-io/${project.artifactId}</jib.to.image>

		<!-- ===================================================================== -->
		<!-- ============================== Libaries ============================= -->
		<!-- ===================================================================== -->

		<version.com.influxdb.client>6.9.0</version.com.influxdb.client>
		<version.com.jayway.jsonpath>2.7.0</version.com.jayway.jsonpath>
		<version.io.cloudevents>2.5.0</version.io.cloudevents>
		<version.io.kokuwa.maven.k3s>1.0.2</version.io.kokuwa.maven.k3s>
		<version.io.kokuwa.micronaut.codegen>3.4.1</version.io.kokuwa.micronaut.codegen>
		<version.io.kokuwa.micronaut.influxdb>3.0.2</version.io.kokuwa.micronaut.influxdb>
		<version.io.kokuwa.micronaut.logging>3.2.0</version.io.kokuwa.micronaut.logging>
		<version.io.micronaut>3.10.0</version.io.micronaut>
		<version.io.micronaut.data>3.10.0</version.io.micronaut.data>
		<version.io.moquette>0.16</version.io.moquette>
		<version.org.awaitility>4.2.0</version.org.awaitility>
		<version.org.bouncycastle>1.76</version.org.bouncycastle>
		<version.org.eclipse.hono>2.1.1</version.org.eclipse.hono>
		<version.org.eclipse.paho>1.2.5</version.org.eclipse.paho>
		<version.org.keycloak>21.1.1</version.org.keycloak>
		<version.org.mapstruct>1.5.5.Final</version.org.mapstruct>
		<version.org.projectlombok>1.18.28</version.org.projectlombok>

	</properties>

	<dependencyManagement>
		<dependencies>

			<!-- micronaut -->
			<dependency>
				<groupId>io.micronaut</groupId>
				<artifactId>micronaut-bom</artifactId>
				<version>${version.io.micronaut}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.micronaut</groupId>
				<artifactId>micronaut-inject</artifactId>
				<version>${version.io.micronaut}</version>
				<exclusions>
					<exclusion>
						<groupId>javax.annotation</groupId>
						<artifactId>javax.annotation-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.micronaut.data</groupId>
				<artifactId>micronaut-data-processor</artifactId>
				<version>${version.io.micronaut.data}</version>
			</dependency>
			<dependency>
				<groupId>io.kokuwa.micronaut</groupId>
				<artifactId>micronaut-logging</artifactId>
				<version>${version.io.kokuwa.micronaut.logging}</version>
			</dependency>
			<dependency>
				<groupId>io.kokuwa.micronaut</groupId>
				<artifactId>micronaut-influxdb</artifactId>
				<version>${version.io.kokuwa.micronaut.influxdb}</version>
			</dependency>

			<!-- libraries -->
			<dependency>
				<groupId>com.influxdb</groupId>
				<artifactId>influxdb-client-reactive</artifactId>
				<version>${version.com.influxdb.client}</version>
				<exclusions>
					<exclusion>
						<groupId>com.google.code.findbugs</groupId>
						<artifactId>jsr305</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.cloudevents</groupId>
				<artifactId>cloudevents-json-jackson</artifactId>
				<version>${version.io.cloudevents}</version>
				<exclusions>
					<exclusion>
						<groupId>com.fasterxml.jackson.core</groupId>
						<artifactId>jackson-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.fasterxml.jackson.core</groupId>
						<artifactId>jackson-databind</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.cloudevents</groupId>
				<artifactId>cloudevents-kafka</artifactId>
				<version>${version.io.cloudevents}</version>
				<exclusions>
					<exclusion>
						<groupId>org.apache.kafka</groupId>
						<artifactId>kafka-clients</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.moquette</groupId>
				<artifactId>moquette-broker</artifactId>
				<version>${version.io.moquette}</version>
				<exclusions>
					<exclusion>
						<groupId>com.bugsnag</groupId>
						<artifactId>bugsnag</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.eclipse.hono</groupId>
				<artifactId>hono-bom</artifactId>
				<version>${version.org.eclipse.hono}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.paho</groupId>
				<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
				<version>${version.org.eclipse.paho}</version>
			</dependency>
			<dependency>
				<groupId>org.keycloak.bom</groupId>
				<artifactId>keycloak-bom-parent</artifactId>
				<version>${version.org.keycloak}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${version.org.projectlombok}</version>
			</dependency>
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${version.org.mapstruct}</version>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>${version.org.awaitility}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk18on </artifactId>
				<version>${version.org.bouncycastle}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<dependencies>

		<!-- avoid compiler warning, see https://docs.micronaut.io/latest/guide/#_nullable_annotations -->
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- build -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.openapitools</groupId>
					<artifactId>openapi-generator-maven-plugin</artifactId>
					<configuration>
						<generatorName>micronaut</generatorName>
						<modelNameSuffix>VO</modelNameSuffix>
						<output>${project.build.directory}</output>
						<skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>io.kokuwa.micronaut</groupId>
							<artifactId>micronaut-openapi-codegen</artifactId>
							<version>${version.io.kokuwa.micronaut.codegen}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>com.google.cloud.tools</groupId>
					<artifactId>jib-maven-plugin</artifactId>
					<configuration>
						<container>
							<labels>
								<org.opencontainers.image.title>${project.name}</org.opencontainers.image.title>
								<org.opencontainers.image.description>TODO</org.opencontainers.image.description>
								<org.opencontainers.image.url>https://docs.inoa.io</org.opencontainers.image.url>
								<org.opencontainers.image.source>https://github.com/inoa-io/inoa-cloud</org.opencontainers.image.source>
								<org.opencontainers.image.vendor>${project.organization.name}</org.opencontainers.image.vendor>
								<org.opencontainers.image.version>${project.version}</org.opencontainers.image.version>
								<org.opencontainers.image.authors>https://github.com/orgs/inoa-io/people</org.opencontainers.image.authors>
							</labels>
						</container>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openapitools.openapistylevalidator</groupId>
					<artifactId>openapi-style-validator-maven-plugin</artifactId>
					<configuration>
						<!-- skip examples -->
						<validateModelPropertiesExample>false</validateModelPropertiesExample>
					</configuration>
				</plugin>
				<plugin>
					<groupId>io.kokuwa.maven</groupId>
					<artifactId>k3s-maven-plugin</artifactId>
					<version>${version.io.kokuwa.maven.k3s}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
